# eastern-equip-rentals

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PHASE-00-PROGRESS.md  PHASE-01-PROGRESS.md  PHASE-02a-PROGRESS.md  PHASE-02b-PROGRESS.md  PHASE-03-PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  eastern-rentals-buildplan.md  eastern-rentals-phase-00-environment.md  eastern-rentals-phase-01-foundation.md  eastern-rentals-phase-02a-catalog-availability.md  eastern-rentals-phase-02b-reservation-payment.md  eastern-rentals-progress.md  eastern-rentals-sow-v1.3.md  eastern-rentals-spec-v2.1.md  eastern_rentals_prototype_v0.html  eastern_rentals_prototype_v1.html
api/: .dockerignore  Dockerfile  _smoke_phase02a.py  pyproject.toml  requirements.txt
api/app/: config.py  deps.py  email.py  errors.py  main.py  middleware.py  notify.py  ratelimit.py  schemas.py  signwell.py  sms.py  stripe_client.py  supa.py  worker.py
api/app/jobs/: __init__.py  hold_expiry.py  runner.py  scheduler.py  signwell_poll.py
api/app/routers/: account.py  admin_crm.py  admin_handover.py  admin_inventory.py  admin_jobs.py  admin_ops.py  catalog.py  documents.py  quote.py  reservations.py  webhooks.py
api/app/services/: availability.py  delivery.py  gate.py  imaging.py  pricing.py  retention.py  storage.py
api/tests/: test_availability.py  test_delivery.py  test_deposit_strategy.py  test_gate.py  test_jobs.py  test_pricing.py  test_ratelimit.py  test_retention.py  test_webhook_idempotency.py
e2e/: .gitignore  README.md  package-lock.json  package.json  (+1 more)
web/: Dockerfile  (+5 more)
(+90 files in other folders)
